<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 	xmlns:android="http://schemas.android.com/apk/res/android"
    				xmlns:slam="http://schemas.android.com/apk/res/it.unibo.slam" >
    <PreferenceCategory android:title="@string/general_category_pref_title"
        				android:key="@string/general_category_pref_key">
        <CheckBoxPreference android:key="@string/execute_native_pref_key" 
        					android:defaultValue="@bool/execute_native_default" 
        					android:summary="@string/execute_native_pref_summary" 
        					android:title="@string/execute_native_pref_title"/>
    	<it.unibo.slam.gui.preferences.IntegerListPreference	android:summary="@string/subsample_amount_pref_summary" 
        														android:key="@string/subsample_amount_pref_key" 
        														android:title="@string/subsample_amount_pref_title" 
        														slam:entries="@array/subsample_amount_pref_entries" 
        														slam:entryValues="@array/subsample_amount_pref_entry_values"
        														android:defaultValue="@integer/subsample_amount_default"
        														android:dialogTitle="@string/subsample_amount_pref_title"/>
    	<CheckBoxPreference android:title="@string/grabber_as_thread_pref_title" 
        					android:defaultValue="@bool/grabber_as_thread_default" 
        					android:summary="@string/grabber_as_thread_pref_summary" 
        					android:key="@string/grabber_as_thread_pref_key"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/algorithm_category_pref_title"
        				android:key="@string/algorithm_category_pref_key">
    	<it.unibo.slam.gui.preferences.IntegerListPreference 	android:summary="@string/rba_rings_pref_summary" 
        														android:key="@string/rba_rings_pref_key" 
        														android:title="@string/rba_rings_pref_title" 
        														slam:entries="@array/rba_rings_pref_entries" 
        														slam:entryValues="@array/rba_rings_pref_entry_values"
        														android:defaultValue="@integer/rba_rings_default"
        														android:dialogTitle="@string/rba_rings_pref_title"/>
    	<it.unibo.slam.gui.preferences.FloatListPreference 		android:summary="@string/keyframe_overlapping_pref_summary" 
        														android:key="@string/keyframe_overlapping_pref_key" 
        														android:title="@string/keyframe_overlapping_pref_title" 
        														slam:entries="@array/keyframe_overlapping_pref_entries" 
        														slam:entryValues="@array/keyframe_overlapping_pref_entry_values"
        														android:defaultValue="@string/keyframe_overlapping_default"
        														android:dialogTitle="@string/keyframe_overlapping_pref_title"/>
    	<CheckBoxPreference android:key="@string/try_loop_inference_pref_key" 
        					android:defaultValue="@bool/try_loop_inference_default" 
        					android:summary="@string/try_loop_inference_pref_summary" 
        					android:title="@string/try_loop_inference_pref_title"/>
    	<it.unibo.slam.gui.preferences.FloatListPreference 	android:summary="@string/active_window_length_pref_summary" 
        													android:key="@string/active_window_length_pref_key" 
        													android:title="@string/active_window_length_pref_title" 
        													slam:entries="@array/active_window_length_pref_entries" 
        													slam:entryValues="@array/active_window_length_pref_entry_values"
        													android:defaultValue="@string/active_window_length_default"
        													android:dialogTitle="@string/active_window_length_pref_title"/>
    	<CheckBoxPreference android:key="@string/debug_algorithm_pref_key" 
        					android:defaultValue="@bool/debug_algorithm_default" 
        					android:summary="@string/debug_algorithm_pref_summary" 
        					android:title="@string/debug_algorithm_pref_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/export_category_pref_title"
        				android:key="@string/export_category_pref_key">
    	<it.unibo.slam.gui.preferences.EditTextFloatPreference	android:summary="@string/octree_resolution_pref_summary" 
        														android:key="@string/octree_resolution_pref_key" 
        														android:title="@string/octree_resolution_pref_title" 
        														android:defaultValue="@string/octree_resolution_default"
        														android:dialogTitle="@string/octree_resolution_pref_title"/>
    	<it.unibo.slam.gui.preferences.IntegerListPreference 	android:summary="@string/export_file_format_pref_summary" 
        														android:key="@string/export_file_format_pref_key" 
        														android:title="@string/export_file_format_pref_title" 
        														slam:entries="@array/export_file_format_pref_entries" 
        														slam:entryValues="@array/export_file_format_pref_entry_values"
        														android:defaultValue="@integer/export_file_format_default"
        														android:dialogTitle="@string/export_file_format_pref_title"/>
    	<EditTextPreference	android:summary="@string/export_file_path_pref_summary" 
    	    				android:key="@string/export_file_path_pref_key" 
        					android:title="@string/export_file_path_pref_title" 
        					android:defaultValue="@string/export_file_path_default"
        					android:dialogTitle="@string/export_file_path_pref_title"/>
    </PreferenceCategory>
</PreferenceScreen>